export class Device{
    constructor(
        public id: number,
        public name: string,
        public brand: string
        ){            
    }
}